/* dummy.proto: describes the DummyConfig object
 *
 * Author: J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package proto;

message DummyConfig {
    repeated string say = 1;
    string wait = 2;
}